--- a/README
+++ b/README
@@ -12,11 +12,11 @@ configuration and setup is required to play around
 with this website on your own computer.
 
 1) The project uses MySQL by default. However,
-the database is not included. For that matter,
-nothing in the data folder is included. That data
-will have to be recreated for your own use.
+neither the database nor database.php is included
+in this repository. It is your responsibility
+to set that up on your own.
 
-3) In the root of this project, remember to create the
+2) In the root of this project, remember to create the
 tmp folder. Give 777 permissions to
 both of them. Windows users, you'll have to discover
 the equivalent commands on your own.
