We're on 3.9 now.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is the repository for Pump Pro Edits V3: Player Power.
+This is the repository for Pump Pro Edits V3.9.
 The website is at http://www.pumpproedits.com for now.
 It is called as such because the players can now directly
 contribute to how the website looks, feels, and behaves.
