"for now" only applied to the beta URL.

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This is the repository for Pump Pro Edits V3.9.
-The website is at http://www.pumpproedits.com for now.
+The website is at http://www.pumpproedits.com.
 It is called as such because the players can now directly
 contribute to how the website looks, feels, and behaves.
 You can now follow the source contributions to the website
