General update meant for easier merging.

--- a/README
+++ b/README
@@ -5,6 +5,9 @@ For the most part, this is the same concept
 as Pump Pro Edits V3: Player Power Preferred.
 Thus, reading that readme file would be best.
 
+Do keep in mind that Pump Pro Edits is on version 3.9,
+but the concepts should still be the same.
+
 If there are any questions, feel free to contact me.
 
 -- Jason "Wolfman2000" Felds
