--- a/README
+++ b/README
@@ -5,6 +5,10 @@ For the most part, this is the same concept
 as Pump Pro Edits V3: Player Power Preferred.
 Thus, reading that readme file would be best.
 
+At this time, submitting edits is not allowed.
+Requests for adding individual edits can be made
+on a case by case basis.
+
 Do keep in mind that Pump Pro Edits is on version 3.9,
 but the concepts should still be the same.
 
