--- a/README
+++ b/README
@@ -40,7 +40,7 @@ but try to be careful.
 
 Don't be afraid to use many different technologies either.
 Presently, this website uses an SVG based Edit Creator
-with hooks for AJAX, JSON, jQuery, and Twitter. Take advantage
+with hooks for AJAJ, JSON, jQuery, and Twitter. Take advantage
 of what the web has to offer. If it is a standard technology
 implemented by many web browsers, go ahead.
 
